fix scroll down button so it doesnt jump past title of first post

--- a/themes/casper/static/css/screen.css
+++ b/themes/casper/static/css/screen.css
@@ -590,7 +590,7 @@ body.nav-opened .site-wrapper {
 
 .menuholder {
     background: #ac393f;
-    height: 65px;
+    height: 60px;
     z-index: 10;
   }
 
@@ -602,7 +602,7 @@ body.nav-opened .site-wrapper {
 }
 
 .stickymenuholder + .content {
-    padding-top: 65px;
+    padding-top: 60px;
 }
 
 
